fix: mv command does not take -r

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,7 +13,7 @@ jobs:
           fetch-depth: 0
 
       - name: Copy quartz Files to Repository Root
-        run: mv -r .quartz .
+        run: mv .quartz/* .
 
       - name: Build Link Index
         uses: jackyzha0/hugo-obsidian@v2.18
