--- a/.quartz/config.toml
+++ b/.quartz/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://quartz.jzhao.xyz/"
+baseURL = "https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/"
 languageCode = "en-us"
 googleAnalytics = "G-XYFD95KB4J"
 relativeURLs = false
